# neural-networks

./: .gitignore  README.md  pyproject.toml
neural-network/: __main__.py
