[tool.poetry]
name = "neural-network"
version = "0.1.0"
description = ""
authors = ["Hugo Ludemann <hugo.ludemann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
keras = "^3.6.0"
numpy = ">=1.26.0,<2.0.0"
# numpy = "^2.1.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scikit-learn = "^1.5.2"
scikit-learn-intelex = "^2024.7.0"
jax = "^0.4.34"
pydot = "^3.0.2"
pendulum = "^3.0.0"
nbconvert = "^7.16.4"
keras-tuner = "^1.4.7"
grpcio = "^1.67.0"
tensorflow = "^2.17.0"
kaggle = "^1.6.17"
polars = "^1.9.0"
plotly = "^5.24.1"
bokeh = "^3.6.0"
autograd = "^1.7.0"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
